style: fix gender select box height and padding alignment in profile edit form

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -864,6 +864,16 @@ body.mypage {
     background: #fff;
     transition: border-color 0.2s, box-shadow 0.2s;
     outline: none;
+    height: 42px;
+}
+
+.mp-form-group select {
+    -webkit-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%23999' stroke-width='2'%3E%3Cpath d='M6 9l6 6 6-6'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 14px center;
+    padding-right: 36px;
 }
 
 .mp-form-group input:focus,
